# panorama

./: .gitmodules  CMakeLists.txt  README.markdown
cmake/modules/: FindNetworkManagerQt.cmake
contrib/: CMakeLists.txt
contrib/pndmanager/: settings.cfg_default
contrib/pndmanager/scripts/: panorama.sh
core/: CMakeLists.txt
core/qrc/: root.qml
core/src/: main.cpp  mainwindow.cpp  mainwindow.h  runtime.cpp  runtime.h
interfaces/Colors/: ui.qml
interfaces/Colors/qml/: PositionedImage.qml  PositionedText.qml  SelectionIcon.qml  TextStyle.qml
interfaces/Consolidation/: ActionQueue.qml  Button.qml  Clock.qml  FilterDialog.qml  InstallDialog.qml  PackageDelegate.qml  PackageDetails.qml  RemoveDialog.qml  UpgradeDialog.qml  ui.qml
interfaces/Magma/: ui.qml
interfaces/Magma/qml/: ApplicationViewer.qml  ProgressBar.qml
interfaces/NetworkManagerTest/: ui.qml
interfaces/PNDManager/: BooleanSetting.qml  BottomBar.qml  Button.qml  CategoriesView.qml  CategoryView.qml  CommentView.qml  ConfirmationDialog.qml  ControlHelp.qml  GuiHint.qml  HelpDialog.qml  HomeView.qml  IconButton.qml  InstallLocationDialog.qml  InstalledView.qml  Notification.qml  PackageDelegate.qml  PackageInfoText.qml  PackageList.qml  PackageView.qml  PreviewPictureView.qml  ProgressBar.qml  RatingView.qml  ScrollBar.qml  SearchView.qml  SectionHeader.qml  SectionItem.qml  SettingsItem.qml  SettingsView.qml  SpinnerImage.qml  SpinnerOverlay.qml  StretchRow.qml  StyledListView.qml  TextSetting.qml  TopBar.qml  View.qml  ViewStack.qml  ViewStackList.qml  theme.js  ui.qml  util.js
interfaces/PNDManager/img/guihints/: license.txt  readme.txt
interfaces/Simplicity/: ui.qml
interfaces/Tabbed/: ui.qml
interfaces/Test/: ui.qml
interfaces/Test/pages/: Applications.qml
interfaces/Test/widgets/: Book.qml  Clock.qml  Page.qml
interfaces/TestSuite/: ui.qml
plugins/: CMakeLists.txt
plugins/applications/: CMakeLists.txt
plugins/applications/src/: appaccumulator.cpp  applicationattached.cpp  applicationfiltermodel.cpp  applicationfiltermodel.h  applicationmodel.cpp  applicationmodel.h  applications.h  applicationsplugin.cpp  applicationsplugin.h  desktopfile.cpp  iconfinder.cpp
plugins/metadata/Panorama/Applications/: qmldir
plugins/metadata/Panorama/Milky/: qmldir
plugins/metadata/Panorama/NetworkManager/: qmldir
plugins/metadata/Panorama/PNDManagement/: qmldir
plugins/metadata/Panorama/Pandora/: qmldir
plugins/metadata/Panorama/Settings/: qmldir
plugins/metadata/Panorama/SystemInformation/: qmldir
plugins/metadata/Panorama/TextFile/: qmldir
plugins/metadata/Panorama/UI/: qmldir
plugins/networkmanager/: CMakeLists.txt
plugins/networkmanager/src/: networkmanagerplugin.cpp  networkmanagerplugin.h  networkmanagerproxy.cpp  networkmanagerproxy.h
plugins/pandora/: CMakeLists.txt
plugins/pandora/src/: pandora.h  pandoraattached.cpp  pandoraeventlistener.cpp  pandoraeventlistener.h  pandoraeventsource.cpp  pandorakeyevent.h  pandoraplugin.cpp  pandoraplugin.h
plugins/pndmanagement/: CMakeLists.txt
plugins/pndmanagement/src/: downloadworker.cpp  downloadworker.h  handleexecutionqueue.cpp  handleexecutionqueue.h  package.cpp  package.h  pnddeclarativeimageprovider.cpp  pnddeclarativeimageprovider.h  pndfilter.cpp  pndfilter.h  pndlistmodel.cpp  pndlistmodel.h  pndmanagementplugin.cpp  pndmanagementplugin.h  pndmanager.cpp  pndmanager.h  pndutils.cpp  pndutils.h  syncworker.cpp  syncworker.h
plugins/settings/: CMakeLists.txt
plugins/settings/src/: setting.h  settingsplugin.cpp  settingsplugin.h
plugins/systeminformation/: CMakeLists.txt
plugins/systeminformation/src/: systeminformation.h  systeminformationplugin.cpp  systeminformationplugin.h
plugins/textfile/: CMakeLists.txt
plugins/textfile/src/: textfile.h  textfileplugin.cpp  textfileplugin.h
plugins/ui/: CMakeLists.txt
plugins/ui/src/: panoramaui.cpp  panoramaui.h  uiplugin.cpp  uiplugin.h
