PROJECT(UI)

FIND_PACKAGE(Qt5Quick REQUIRED)
FIND_PACKAGE(Qt5Qml REQUIRED)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(ui_SOURCES
    src/uiplugin.cpp
    src/panoramaui.cpp)

SET(ui_HEADERS
    src/uiplugin.h
    src/panoramaui.h)


ADD_DEFINITIONS(${QT_DEFINITIONS} -DQT_PLUGIN -DQT_SHARED)
ADD_LIBRARY(ui MODULE ${ui_SOURCES})
qt5_use_modules(ui Quick Qml)

INSTALL(TARGETS ui DESTINATION ${PLUGINDIR}/Panorama/UI)

